FronEnt Routes, Login/Logout, Common pages, Toaster etc

--- a/FrontEnd/src/app/core/preloader/preloader.scss
+++ b/FrontEnd/src/app/core/preloader/preloader.scss
@@ -6,7 +6,7 @@
 @import "../../shared/styles/bootstrap/_mixins";
 @import "../../shared/styles/app/variables";
 
-$preloader-bg: $info;
+$preloader-bg: $inverse;
 $preloader-wd: 100px;
 $preloader-hg: 30px;
 
