--- a/FrontEnd/src/app/routes/home/home/home.component.html
+++ b/FrontEnd/src/app/routes/home/home/home.component.html
@@ -3,15 +3,15 @@
         <div class="row">
             <div class="col-xl-3 col-lg-4">
                 <div class="text-center">
-                    <img alt="Angular" class="img-fluid home-logo" src="assets/img/angular.svg" />
+                    <img alt="Angular" class="img-fluid home-logo" src="assets/img/iconfinder_yummy-tools-16_1626872.svg" />
                 </div>
             </div>
             <div class="col-xl-9 col-lg-8 home-text">
-                <h1 class="home-text-big">Angle</h1>
-                <p class="lead">Bootstrap 4 Admin Template + <strong>Angular</strong>
-                    <br> <small>One framework. Mobile & desktop.</small>
+                <h1 class="home-text-big">AutoMotive</h1>
+                <p class="lead">Either two or four <strong>WHEELS</strong>
+                    <br> <small>Mind your ride</small>
                 </p>
-                <p><a class="btn btn-primary btn-lg" href="https://angular.io/" target="_blank">Learn more</a></p>
+                <p><a class="btn btn-primary btn-lg" href="#">Dashboard</a></p>
             </div>
         </div>
     </div>
