--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -6,6 +6,7 @@
 @import '~@fortawesome/fontawesome-free/css/solid.css';
 @import '~@fortawesome/fontawesome-free/css/fontawesome.css';
 @import '~simple-line-icons/css/simple-line-icons.css';
+@import '~angular2-toaster/toaster.css';
 
 //== Bootstrap
 @import "./app/shared/styles/bootstrap.scss";
