Added Some vector logos

--- a/FrontEnd/src/app/routes/pages/login/login.component.html
+++ b/FrontEnd/src/app/routes/pages/login/login.component.html
@@ -4,7 +4,7 @@
       <div class="card card-flat">
           <div class="card-header text-center bg-dark">
               <a href="#">
-                  <img class="block-center rounded" src="assets/img/logo.png" alt="Image" />
+                  <img class="block-center rounded" src="assets/img/LogoGearsAM.svg" alt="Image" width="200" title="{{settings.getAppSetting('description')}}"/>
               </a>
           </div>
           <div class="card-body">
