--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -4,10 +4,10 @@
     <div class="navbar-header">
         <a class="navbar-brand" [routerLink]="'/home'">
             <div class="brand-logo">
-                <img class="img-fluid" src="assets/img/logo.png" alt="App Logo" />
+                <img class="img-fluid" src="assets/img/LogoGearsAM.svg" alt="App Logo"/>
             </div>
             <div class="brand-logo-collapsed">
-                <img class="img-fluid" src="assets/img/logo-single.png" alt="App Logo" />
+                <img class="img-fluid" src="assets/img/LogoVetemGears.svg" alt="App Logo" style="width: 40px" />
             </div>
         </a>
     </div>
