Some other logos and cleanups.

--- a/FrontEnd/src/app/routes/home/home/home.component.html
+++ b/FrontEnd/src/app/routes/home/home/home.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-xl-3 col-lg-4">
                 <div class="text-center">
-                    <img alt="Angular" class="img-fluid home-logo" src="assets/img/iconfinder_yummy-tools-16_1626872.svg" />
+                    <img alt="Angular" class="img-fluid home-logo" src="assets/img/LogoGGaugeVetemKuq.svg" />
                 </div>
             </div>
             <div class="col-xl-9 col-lg-8 home-text">
@@ -15,7 +15,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-lg-4">
             <div class="card b">
                 <div class="card-header">
@@ -78,5 +78,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
