--- a/FrontEnd/src/app/routes/pages/login/login.component.html
+++ b/FrontEnd/src/app/routes/pages/login/login.component.html
@@ -2,9 +2,9 @@
   <div class="block-center mt-4 wd-xl">
       <!-- START card-->
       <div class="card card-flat">
-          <div class="card-header text-center bg-dark">
-              <a href="#">
-                  <img class="block-center rounded" src="assets/img/LogoGearsAM.svg" alt="Image" width="200" title="{{settings.getAppSetting('description')}}"/>
+          <div class="card-header text-center">
+              <a [routerLink]="'/'">
+                  <img class="block-center rounded" src="assets/img/LogoGGaugeVetemKuq.svg" alt="Image" width="70" title="{{settings.getAppSetting('description')}}"/><span style="color: #4D4D4D"> {{settings.getAppSetting('name')}}</span>
               </a>
           </div>
           <div class="card-body">
