--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -4,10 +4,10 @@
     <div class="navbar-header">
         <a class="navbar-brand" [routerLink]="'/home'">
             <div class="brand-logo">
-                <img class="img-fluid" src="assets/img/LogoGearsAM.svg" alt="App Logo"/>
+                <img class="img-fluid" src="assets/img/LogoGGaugeVetemKuq.svg" alt="App Logo" style="width: 40px; margin: 0%; padding: 0%"/> <span style="color: aliceblue"> {{settings.getAppSetting('name')}}</span>
             </div>
             <div class="brand-logo-collapsed">
-                <img class="img-fluid" src="assets/img/LogoVetemGears.svg" alt="App Logo" style="width: 40px" />
+                <img class="img-fluid" src="assets/img/LogoGGaugeVetemKuq.svg" alt="App Logo" style="width: 50px" />
             </div>
         </a>
     </div>
@@ -67,15 +67,15 @@
         <li class="nav-item dropdown dropdown-list" dropdown>
             <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" dropdownToggle>
                 <em class="icon-bell"></em>
-                <span class="badge badge-danger">11</span>
+                <span class="badge badge-danger"></span>
             </a>
             <!-- START Dropdown menu-->
-            <div *dropdownMenu class="dropdown-menu dropdown-menu-right animated flipInX">
+            <div *dropdownMenu class="dropdown-menu dropdown-menu-right animated fadeInUp">
                 <div class="dropdown-item">
                     <!-- START list group-->
                     <div class="list-group">
                        <!-- list item-->
-                       <div class="list-group-item list-group-item-action">
+                       <!-- <div class="list-group-item list-group-item-action">
                           <div class="media">
                              <div class="align-self-start mr-2">
                                 <em class="fab fa-twitter fa-2x text-info"></em>
@@ -85,36 +85,13 @@
                                 <p class="m-0 text-muted text-sm">1 new follower</p>
                              </div>
                           </div>
-                       </div>
+                       </div> -->
                        <!-- list item-->
-                       <div class="list-group-item list-group-item-action">
-                          <div class="media">
-                             <div class="align-self-start mr-2">
-                                <em class="fa fa-envelope fa-2x text-warning"></em>
-                             </div>
-                             <div class="media-body">
-                                <p class="m-0">New e-mails</p>
-                                <p class="m-0 text-muted text-sm">You have 10 new emails</p>
-                             </div>
-                          </div>
-                       </div>
-                       <!-- list item-->
-                       <div class="list-group-item list-group-item-action">
-                          <div class="media">
-                             <div class="align-self-start mr-2">
-                                <em class="fa fa-tasks fa-2x text-success"></em>
-                             </div>
-                             <div class="media-body">
-                                <p class="m-0">Pending Tasks</p>
-                                <p class="m-0 text-muted text-sm">11 pending task</p>
-                             </div>
-                          </div>
-                       </div>
                        <!-- last list item-->
                        <div class="list-group-item list-group-item-action">
                           <span class="d-flex align-items-center">
-                             <span class="text-sm">More notifications</span>
-                             <span class="badge badge-danger ml-auto">14</span>
+                             <span class="text-sm">S'ka asnjë njoftim</span>
+                             <span class="badge badge-danger ml-auto">0</span>
                           </span>
                        </div>
                     </div>
