--- a/FrontEnd/src/app/routes/pages/recover/recover.component.html
+++ b/FrontEnd/src/app/routes/pages/recover/recover.component.html
@@ -2,11 +2,11 @@
   <div class="block-center mt-4 wd-xl">
       <!-- START card-->
       <div class="card card-flat">
-          <div class="card-header text-center bg-dark">
-              <a href="#">
-                  <img class="block-center rounded" src="assets/img/logo.png" alt="Image" />
-              </a>
-          </div>
+        <div class="card-header text-center">
+            <a [routerLink]="'/'">
+                <img class="block-center rounded" src="assets/img/LogoGGaugeVetemKuq.svg" alt="Image" width="70" title="{{settings.getAppSetting('description')}}"/><span style="color: #4D4D4D"> {{settings.getAppSetting('name')}}</span>
+            </a>
+        </div>
           <div class="card-body">
               <p class="text-center py-2">PASSWORD RESET</p>
               <form [formGroup]="valForm" class="form-validate" role="form" name="recoverForm" novalidate="" (submit)="submitForm($event, valForm.value)">
