Register users FrontEnd. Fixed firstTime run BackEnd

--- a/BackEnd/templates/verify.ejs
+++ b/BackEnd/templates/verify.ejs
@@ -222,7 +222,7 @@
 
                                         <p style="line-height: 24px; margin-bottom:15px;">
  
-                                            <%= user.name %> <%= user.surname %>,
+                                            <%= user.emer %> <%= user.mbiemer %>,
 
                                         </p>
                                         <p style="line-height: 24px;margin-bottom:15px;">
