--- a/FrontEnd/src/app/layout/sidebar/userblock/userblock.component.html
+++ b/FrontEnd/src/app/layout/sidebar/userblock/userblock.component.html
@@ -2,13 +2,15 @@
     <!-- User picture-->
     <div class="user-block-picture">
         <div class="user-block-status">
-            <img class="img-thumbnail rounded-circle" [src]="user.picture" alt="Avatar" />
+            <img class="img-thumbnail rounded-circle" [src]="user?.avatar || ''" alt="Avatar" />
             <div class="circle bg-success circle-lg"></div>
         </div>
     </div>
     <!-- Name and Job-->
     <div class="user-block-info">
-        <span class="user-block-name">{{ 'sidebar.WELCOME' | translate }}  John</span>
-        <span class="user-block-role">Programmer</span>
+        <span class="user-block-name">{{ 'sidebar.WELCOME' | translate }} {{user?.emer}} {{user?.mbiemer}}</span>
+        <span class="user-block-role">
+            <a href="" (click)="logOut()">Logout</a>
+        </span>
     </div>
 </div>
