--- a/FrontEnd/src/app/routes/pages/error404/error404.component.html
+++ b/FrontEnd/src/app/routes/pages/error404/error404.component.html
@@ -28,12 +28,12 @@
           </li>
       </ul>
       <div class="p-3 text-center">
-          <span>&copy;</span>
-          <span>{{ settings.getAppSetting('year') }}</span>
-          <span class="mx-2">-</span>
-          <span>{{ settings.getAppSetting('name') }}</span>
-          <br/>
-          <span>{{ settings.getAppSetting('description') }}</span>
-      </div>
+        <span>&copy;</span>
+        <span>{{ settings.getAppSetting('year') }}</span>
+        <span class="mx-2">-</span>
+        <span>{{ org?.orgname }}</span>
+        <br/>
+        <span>{{ org?.slogan }}</span>
+    </div>
   </div>
 </div>
