--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -12,3 +12,5 @@
 @import "./app/shared/styles/bootstrap.scss";
 //== Application
 @import "./app/shared/styles/app.scss";
+//datepicker 
+@import '../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css';
