FrontEnd UserProfile Form (NotCompleted) & Style fixes

--- a/FrontEnd/src/app/shared/styles/app.scss
+++ b/FrontEnd/src/app/shared/styles/app.scss
@@ -40,26 +40,26 @@
 @import "app/utils";
 @import "app/print";
 // Elements
-// @import "app/spinner";
+@import "app/spinner";
 // Charts
-// @import "app/radial-bar";
-// @import "app/chart-flot";
-// @import "app/chart-easypie";
+@import "app/radial-bar";
+@import "app/chart-flot";
+@import "app/chart-easypie";
 // Form elements
-// @import "app/form-select2";
-// @import "app/form-tags-input";
-// @import "app/file-upload";
-// @import "app/summernote";
-// @import "app/typeahead";
+@import "app/form-select2";
+@import "app/form-tags-input";
+@import "app/file-upload";
+@import "app/summernote";
+@import "app/typeahead";
 // Tables
-// @import "app/table-extras";
-// @import "app/table-angulargrid";
+@import "app/table-extras";
+@import "app/table-angulargrid";
 // Maps
-// @import "app/gmap";
-// @import "app/vector-map";
+@import "app/gmap";
+@import "app/vector-map";
 // Extras
-// @import "app/timeline";
-// @import "app/todo";
-// @import "app/calendar";
-// @import "app/mailbox";
-// @import "app/plans";
+@import "app/timeline";
+@import "app/todo";
+@import "app/calendar";
+@import "app/mailbox";
+@import "app/plans";
