--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -6,7 +6,12 @@
 @import '~@fortawesome/fontawesome-free/css/solid.css';
 @import '~@fortawesome/fontawesome-free/css/fontawesome.css';
 @import '~simple-line-icons/css/simple-line-icons.css';
+//Toaster
 @import '~angular2-toaster/toaster.css';
+
+//Spinner
+@import '~spinkit/css/spinkit.css';
+@import '~loaders.css/loaders.css';
 
 //== Bootstrap
 @import "./app/shared/styles/bootstrap.scss";
