FrontEnd Org interface. FileServer improvements. Dynamic app logo, Ubuntu Font

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,2 +1,3 @@
+<ngx-loading-bar [color]="'white'" [includeSpinner]="false"></ngx-loading-bar>
 <toaster-container [toasterconfig]="toasterconfig"></toaster-container>
 <router-outlet></router-outlet>
