--- a/FrontEnd/src/app/routes/personal/profile/profile.component.html
+++ b/FrontEnd/src/app/routes/personal/profile/profile.component.html
@@ -1,4 +1,4 @@
-<span *ngIf="!user">S'ka asnjë të dhënë!</span>
+<span *ngIf="!user"></span>
 <div class="row" *ngIf="user">
     <div class="col">
         <div class="card card-default">
