--- a/FrontEnd/src/app/layout/header/header.component.h.html
+++ b/FrontEnd/src/app/layout/header/header.component.h.html
@@ -4,7 +4,7 @@
     <div class="navbar-header">
         <a class="navbar-brand" href="#/">
             <div class="brand-logo">
-                <img class="img-fluid" src="assets/img/LogoGGaugeVetemKuq.svg" alt="App Logo" />
+                <img class="img-fluid" src="assets/img/looking.png" alt="App Logo" />
             </div>
             <div class="brand-logo-collapsed">
                 <img class="img-fluid" src="assets/img/logo-single.png" alt="App Logo" />
