--- a/FrontEnd/src/app/shared/styles/app/typo.scss
+++ b/FrontEnd/src/app/shared/styles/app/typo.scss
@@ -2,50 +2,88 @@
      Component: typo
  ========================================================================== */
 
+// @font-face{
+//     font-family: 'Source Sans Pro';
+//     font-weight: 300;
+//     font-style: normal;
+//     font-stretch: normal;
+//     src: url('~source-sans-pro/WOFF2/TTF/SourceSansPro-Light.ttf.woff2') format('woff2'),
+//          url('~source-sans-pro/WOFF/OTF/SourceSansPro-Light.otf.woff') format('woff'),
+//          url('~source-sans-pro/OTF/SourceSansPro-Light.otf') format('opentype'),
+//          url('~source-sans-pro/TTF/SourceSansPro-Light.ttf') format('truetype');
+// }
+// @font-face{
+//     font-family: 'Source Sans Pro';
+//     font-weight: 400;
+//     font-style: normal;
+//     font-stretch: normal;
+//     src: url('~source-sans-pro/WOFF2/TTF/SourceSansPro-Regular.ttf.woff2') format('woff2'),
+//          url('~source-sans-pro/WOFF/OTF/SourceSansPro-Regular.otf.woff') format('woff'),
+//          url('~source-sans-pro/OTF/SourceSansPro-Regular.otf') format('opentype'),
+//          url('~source-sans-pro/TTF/SourceSansPro-Regular.ttf') format('truetype');
+// }
+// @font-face{
+//     font-family: 'Source Sans Pro';
+//     font-weight: 400;
+//     font-style: italic;
+//     font-stretch: normal;
+//     src: url('~source-sans-pro/WOFF2/TTF/SourceSansPro-It.ttf.woff2') format('woff2'),
+//          url('~source-sans-pro/WOFF/OTF/SourceSansPro-It.otf.woff') format('woff'),
+//          url('~source-sans-pro/OTF/SourceSansPro-It.otf') format('opentype'),
+//          url('~source-sans-pro/TTF/SourceSansPro-It.ttf') format('truetype');
+// }
+// @font-face{
+//     font-family: 'Source Sans Pro';
+//     font-weight: 600;
+//     font-style: normal;
+//     font-stretch: normal;
+//     src: url('~source-sans-pro/WOFF2/TTF/SourceSansPro-Semibold.ttf.woff2') format('woff2'),
+//          url('~source-sans-pro/WOFF/OTF/SourceSansPro-Semibold.otf.woff') format('woff'),
+//          url('~source-sans-pro/OTF/SourceSansPro-Semibold.otf') format('opentype'),
+//          url('~source-sans-pro/TTF/SourceSansPro-Semibold.ttf') format('truetype');
+// }
+
 @font-face{
-    font-family: 'Source Sans Pro';
+    font-family: 'Ubuntu';
     font-weight: 300;
     font-style: normal;
     font-stretch: normal;
-    src: url('~source-sans-pro/WOFF2/TTF/SourceSansPro-Light.ttf.woff2') format('woff2'),
-         url('~source-sans-pro/WOFF/OTF/SourceSansPro-Light.otf.woff') format('woff'),
-         url('~source-sans-pro/OTF/SourceSansPro-Light.otf') format('opentype'),
-         url('~source-sans-pro/TTF/SourceSansPro-Light.ttf') format('truetype');
+    src: url('~ubuntu-fontface/fonts/ubuntu-condensed-webfont.woff2') format('woff2'),
+         url('~ubuntu-fontface/fonts/ubuntu-condensed-webfont.woff') format('woff'),
+         url('~ubuntu-fontface/fonts/ubuntu-condensed-webfont.ttf') format('truetype');
 }
 @font-face{
-    font-family: 'Source Sans Pro';
+    font-family: 'Ubuntu';
     font-weight: 400;
     font-style: normal;
     font-stretch: normal;
-    src: url('~source-sans-pro/WOFF2/TTF/SourceSansPro-Regular.ttf.woff2') format('woff2'),
-         url('~source-sans-pro/WOFF/OTF/SourceSansPro-Regular.otf.woff') format('woff'),
-         url('~source-sans-pro/OTF/SourceSansPro-Regular.otf') format('opentype'),
-         url('~source-sans-pro/TTF/SourceSansPro-Regular.ttf') format('truetype');
+    src: url('~ubuntu-fontface/fonts/ubuntu-regular-webfont.woff2') format('woff2'),
+         url('~ubuntu-fontface/fonts/ubuntu-regular-webfont.woff') format('woff'),
+         url('~ubuntu-fontface/fonts/ubuntu-regular-webfont.ttf') format('truetype');
 }
 @font-face{
-    font-family: 'Source Sans Pro';
+    font-family: 'Ubuntu';
     font-weight: 400;
     font-style: italic;
     font-stretch: normal;
-    src: url('~source-sans-pro/WOFF2/TTF/SourceSansPro-It.ttf.woff2') format('woff2'),
-         url('~source-sans-pro/WOFF/OTF/SourceSansPro-It.otf.woff') format('woff'),
-         url('~source-sans-pro/OTF/SourceSansPro-It.otf') format('opentype'),
-         url('~source-sans-pro/TTF/SourceSansPro-It.ttf') format('truetype');
+    src: url('~ubuntu-fontface/fonts/ubuntu-medium-italic-webfont.woff2') format('woff2'),
+         url('~ubuntu-fontface/fonts/ubuntu-medium-italic-webfont.woff') format('woff'),
+         url('~ubuntu-fontface/fonts/ubuntu-medium-italic-webfont.ttf') format('truetype');
 }
 @font-face{
-    font-family: 'Source Sans Pro';
+    font-family: 'Ubuntu';
     font-weight: 600;
     font-style: normal;
     font-stretch: normal;
-    src: url('~source-sans-pro/WOFF2/TTF/SourceSansPro-Semibold.ttf.woff2') format('woff2'),
-         url('~source-sans-pro/WOFF/OTF/SourceSansPro-Semibold.otf.woff') format('woff'),
-         url('~source-sans-pro/OTF/SourceSansPro-Semibold.otf') format('opentype'),
-         url('~source-sans-pro/TTF/SourceSansPro-Semibold.ttf') format('truetype');
+    src: url('~ubuntu-fontface/fonts/ubuntu-bold-webfont.woff2') format('woff2'),
+         url('~ubuntu-fontface/fonts/ubuntu-bold-webfont.woff') format('woff'),
+         url('~ubuntu-fontface/fonts/ubuntu-bold-webfont.ttf') format('truetype');
 }
 
 
+
 body {
-    font-family: "Source Sans Pro", sans-serif;
+    font-family: "Ubuntu", sans-serif;
     color: $body-color;
     font-size: 0.875rem; // 14px
 }
